# BEE

./: .gitignore  BEE.h  BEE_dev.h  CMakeLists.txt  DBG.h  MEM.h  README.md  bee.l  bee.y  bee_def.h  builtin.c  create.c  error_message.c  eval.c  execute.c  interface.c  main.c  main.cpp  makefile  string.c  string_pool.c  util.c  util.cpp
debug/: Makefile  debug.c  debug.h
memory/: Makefile  memory.c  memory.h  storage.c
test/: t.bee
